# Sat2Graph-simplified

./: .gitattributes  .gitmodules  Readme.md  localserverSeg.py  main.py  pyproject.toml  start.py
models/: globalv2.pb
osm/: graph_ops.py  osm.py
satellite/: mapbox.py
server/: main.py
worker/: decoder.py  localServerV3.py  localserverV1.py  localserverV2.py  mrf.py  seg2graph.py
worker/mrf/: mrf.py
